<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WiFi Direct_Client</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="file_receiver">File Receiver</string>
    <string name="empty"> </string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="start_sen">Start sender</string>
    <string name="stop_sen">Stop sender</string>
    <string name="receive_broadcast">Receive packets</string>
    <string name="chat">Chat</string>
    <string name="Button_chat">Send</string>
   
</resources>
