<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
   
    android:visibility="gone">
    <LinearLayout
       
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            
            android:orientation="horizontal"
            android:layout_width="match_parent"
            style="?android:attr/buttonBarStyle"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_peer_button" />
            <Button
                android:id="@+id/btn_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnect_peer_button" />
          
             <Button
                android:id="@+id/btn_receive_broadcast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive_broadcast"
                android:visibility="gone" />
              <Button
                android:id="@+id/btn_start_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat"
                android:visibility="gone" />
            </LinearLayout>
             <LinearLayout
            
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <Button
                android:id="@+id/btn_start_sender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_sen"
                android:visibility="gone" />
            
             <Button
                android:id="@+id/btn_stop_sender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_sen"
                android:visibility="gone" />
             
               <Button
                android:id="@+id/btn_start_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_receiver"
                android:visibility="gone" />
            
             
        </LinearLayout>
        <TextView
            android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/device_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/group_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
         
        <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:gravity="center_vertical"
        android:background="@android:color/holo_blue_light" />
        
         <LinearLayout
            
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            
            android:text="@string/empty"
            android:id="@+id/chat_text2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/empty"
            
            android:id="@+id/chat_text"/>
         
         
         
         <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10" >

       
    </EditText>

    <Button
        android:id="@+id/send_chat"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_chat" 
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />    
         
            
       
         
         </LinearLayout>
        
        
    </LinearLayout>
    
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/status_bar"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:background="@android:color/background_dark">
      
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:textColor="@android:color/white"
            android:id="@+id/status_text">
        </TextView>
    </LinearLayout>
</FrameLayout>
